--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "jorgevegachatbot",
-  "version": "0.1.0",
-  "private":"true",
-  "scripts": {
+  "version": "0.2.0",
+  "private": "true",
+    "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint"
   },
   "dependencies": {
     "firebase": "^11.6.1",
